--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,12 @@ ul {
   margin: 0;
   padding: 0;
 }
+
+button {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
 .gallery-align {
   display: flex;
   flex-direction: row;
